# fuel-prices

./: README.md  pyproject.toml
fuel_prices/: app.py
fuel_prices/templates/: index.html.jinja2
templates/: diesel.html.jinja2
