[tool.poetry]
name = "fuel-prices"
version = "0.1.0"
description = ""
authors = ["Peter Stather <github@stather.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = {version = "2.4.3", extras = ["jinja2"]}
uvicorn = { version = "0.24.0.post1", extras = ["standard"] }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
