[tool.poetry]
name = "fuel-prices"
version = "0.1.0"
description = ""
authors = ["Peter Stather <github@stather.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
litestar = "2.4.3"
uvicorn = { version = "0.24.0.post1", extras = ["standard"] }
jinja2 = "3.1.2"
requests = "2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
